--- a/.env.example
+++ b/.env.example
@@ -15,13 +15,15 @@ DB_DATABASE=clone_unguin
 DB_USERNAME=root
 DB_PASSWORD=
 
+ABSTRACTAPI_API_KEY=
+
 PASSWORD_SALT_FRONT="!Un9U"
 PASSWORD_SALT_BACK="4M1k0m."
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
 FILESYSTEM_DISK=local
-QUEUE_CONNECTION=sync
+QUEUE_CONNECTION=database
 SESSION_DRIVER=file
 SESSION_LIFETIME=120
 
